--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 <meta name="description" content="UTILIZAÇÃO" />
 		<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 		<script src="https://www.crmtransporteexecutivo.com.br/js/modernizr.custom.js"></script>
+	<div class="fixar">
+<div>
+<ul class="na">
+<li class="nav"><a class="nave" href='#10'>10/04/2019</a></li>
+<li class="nav"><a class="nave" href='#11'>11/04/2019</a></li>
+<li class="nav"><a class="nave" href='#12'>12/04/2019</a></li>
+<li class="nav"><a class="nave" href='#13'>13/04/2019</a></li>
+<li class="nav"><a class="nave" href='#14'>14/04/2019</a></li>
+<li class="nav"><a class="nave" href='#15'>15/04/2019</a></li>
+</ul>
+</div>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <style>
 div {
 color: #fff;
@@ -56,34 +75,22 @@ text-shadow:0px 0px 5px #fff;
 	left: 0; 
 	top: 0;
 }
-header {
+#10 {
 	font-family: 'Great Vibes', cursive;
 	font: 'Great Vibes', cursive;
 		}
 </style>
+
 <body>
-	<div class="fixar">
-<div id=''>
-<ul class="na">
-<li class="nav"><a class="nave" href='#10'>10/04/2019</a></li>
-<li class="nav"><a class="nave" href='#11'>11/04/2019</a></li>
-<li class="nav"><a class="nave" href='#12'>12/04/2019</a></li>
-<li class="nav"><a class="nave" href='#13'>13/04/2019</a></li>
-<li class="nav"><a class="nave" href='#14'>14/04/2019</a></li>
-<li class="nav"><a class="nave" href='#15'>15/04/2019</a></li>
-</ul>
-</div>
-</div>
+
 <br>
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
+<div class="alexandre">
 <div id="10"><fieldset><legend>10/04/2019 - Total de Clientes: 10</legend>
 <ul>
+<a style="color:red;" href="#total10"><h1 style="color:red;">Total de Itens</h1></a>
 <a><fieldset><legend><h1>10/04/2019 16:46 - Rua diácono Manoel Albino Pereira Número 27</h1></legend></legend>
 <li>ESTICADOR / 6</li>
 <li>CONECTOR / 2</li>
@@ -141,11 +148,18 @@ header {
 <li>Material 39 mts fo 4 CONECTOR 2 ESTICADOR</li>
 <li>Sinal -20,00</li>
 </fieldset></a><br>
-
+<div id="total10"></div>
 <a><fieldset><legend><h1>10/04/2019 16:46 - Cliente Rafael Vitor Fermiano - Rua Sebastião de Souza número 61</h1></legend>
 <li>CTO 270501 porta 04</li>
 <li>Material 75 mts fo 3 CONECTOR 2 ESTICADOR</li>
 <li>Sinal - 19,00</li>
+</fieldset></a><br>
+
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 42 UN</li>
+<li>ROLDANA PLASTICA 2 VIAS (KIT ROLDANA) - 8 UN</li>
+<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 17 UN</li>
+<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 748 MT</li>
 </fieldset></a><br>
 
 </ul></fieldset></div>
@@ -155,6 +169,7 @@ header {
 <br>
 <div id="11" class="border div"><fieldset><legend>11/04/2019 - Total de Clientes: 6</legend>
 <ul>
+<a style="color:red;" href="#total11"><h1 style="color:red;">Total de Itens</h1></a>
 <a><fieldset><legend><h1>11/04/2019 12:12 - Cliente Graciella Scarpino dos Santos - Rua Eloísa Lotierzo 12</h1></legend>
 <li>CTO 4901 porta 4</li>
 <li>Material 1 CONECTOR</li>
@@ -184,10 +199,18 @@ header {
 <a><fieldset><legend><h1>11/04/2019 17:19 - Elizabeth Fossem Araújo - Rua das Laranjeiras 307</h1></legend>
 <li>Ausente</li>
 </fieldset></a><br>
-
+<div id="total11"></div>
 <a><fieldset><legend><h1>11/04/2019 18:23 - Rodrigo Ermelino Cezar - Rua anna Schiavo Chrispim 274</h1></legend>
 <li>Todas caixas próximas cheia</li>
 <li>Inviabilizar com ampliação ou verificar cancelamento sem retirada de drop</li>
+</fieldset></a><br>
+
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 10 UN</li>
+<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 3 UN</li>
+<li>CONECTOR SC/UPC GREATEK - 2 UN</li>
+<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 183 MT</li>
+<li>ROLDANA PLASTICA 2 VIAS (KIT ROLDANA) - 2 UN</li>
 </fieldset></a><br>
 </ul></fieldset></div>
 <br>
@@ -196,6 +219,7 @@ header {
 <br>
 <div id="12" class="border div"><fieldset><legend>12/04/2019 - Total de Clientes: 7</legend>
 <ul>
+<a style="color:red;" href="#total12"><h1 style="color:red;">Total de Itens</h1></a>
 <a><fieldset><legend><h1>12/04/2019 9:00 - Cliente.Ygor Fagundes ramaldes Silva. - Rua Luciano milane 125</h1></legend>
 <li>Cto71108</li>
 <li>Porta4</li>
@@ -232,7 +256,7 @@ av presbitero Manoel Antônio Dias filho</h1></legend>
 <li>cto 50108 porta5</li>
 <li>materiais 90 mts 5 alças 2 conectores verde</li>
 </fieldset></a><br>
-
+<div id="total12"></div>
 <a><fieldset><legend><h1>12/04/2019 18:11 - Rua Benedito zorzi 89  bairro residencial santa Giovana 
  Cliente  Eliana Aparecida dos Santos franciscato 
 Cliente ausente</h1></legend>
@@ -243,6 +267,12 @@ Cliente ausente</h1></legend>
 Rua Estrada do varjao 1832 Rua 8 bairro Novo Horizonte</h1></legend>
 <li>endereço não localizado</li>
 </fieldset></a><br>
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 17 UN</li>
+<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 3 UN</li>
+<li>CONECTOR SC/UPC GREATEK - 3 UN</li>
+<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 407 MT</li>
+</fieldset></a><br>
 </ul></fieldset></div>
 <br>
 <br>
@@ -250,6 +280,7 @@ Rua Estrada do varjao 1832 Rua 8 bairro Novo Horizonte</h1></legend>
 <br>
 <div id="13" class="border div"><fieldset><legend>13/04/2019 - Total de Clientes: 2</legend>
 <ul>
+<a style="color:red;" href="#total13"><h1 style="color:red;">Total de Itens</h1></a>
 <a><fieldset><legend><h1>13/04/2019 13:46 - CLIENTE:Willian José da Silva 
 RUA: Estrada do varjao 1832 Rua 8 </h1></legend>
 <li>MATERIAL: 8alças 136 de fibra 2 Conector verde  </li>
@@ -257,7 +288,7 @@ RUA: Estrada do varjao 1832 Rua 8 </h1></legend>
 <li>SINAL: 26.39</li>
 <li>ACOMPANHADO POR:Willian</li>
 </fieldset></a><br>
-
+<div id="total13"></div>
 <a><fieldset><legend><h1>13/04/2019 15:22 - CLIENTE:Eliana Aparecida dos Santos franciacato 
 RUA Benedito zorzi 89</h1></legend>
 <li>MATERIAL: 4alças 56 de fibra 1 Conector verde 1 conector azul </li>
@@ -265,6 +296,12 @@ RUA Benedito zorzi 89</h1></legend>
 <li>Fibra 5</li>
 <li>SINAL: 18.63</li>
 <li>ACOMPANHADO POR: Eliana</li>
+</fieldset></a><br>
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 12 UN</li>
+<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 3 UN</li>
+<li>CONECTOR SC/UPC GREATEK - 1 UN</li>
+<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 53 MT</li>
 </fieldset></a><br>
 </ul></fieldset></div>
 
@@ -274,6 +311,8 @@ RUA Benedito zorzi 89</h1></legend>
 <br>
 <div id="14" class="border div"><fieldset><legend>14/04/2019 - Total de Clientes: 1</legend>
 <ul>
+<a style="color:red;" href="#total14"><h1 style="color:red;">Total de Itens</h1></a>
+<div id="total14"></div>
 <a><fieldset><legend><h1>14/04/2019 08:04 - Cliente Alessandra Cris tina pedroso 
 RUA: João buscato 51 </h1></legend>
 <li>MATERIAL: 4alças 53de fibra 1 Conector verde 1 conector azul </li>
@@ -282,6 +321,12 @@ RUA: João buscato 51 </h1></legend>
 <li>SINAL: 19.47</li>
 <li>ACOMPANHADO POR: Alessandra</li>
 </fieldset></a><br>
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 4 UN</li>
+<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 1 UN</li>
+<li>CONECTOR SC/UPC GREATEK - 1 UN</li>
+<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 53 MT</li>
+</fieldset></a><br>
 </ul></fieldset></div>
 <br>
 <br>
@@ -289,6 +334,7 @@ RUA: João buscato 51 </h1></legend>
 <br>
 <div id="15" class="border div"><fieldset><legend>15/04/2019 - Total de Clientes: 1</legend>
 <ul>
+<a style="color:red;" href="#total15"><h1 style="color:red;">Total de Itens</h1></a>
 <a><fieldset><legend><h1>15/04/2019 09:20 - Cliente Alessandra Cris tina pedroso 
 RUA: João buscato 51 </h1></legend>
 <li>MATERIAL: 4alças 53de fibra 1 Conector verde 1 conector azul </li>
@@ -298,13 +344,14 @@ RUA: João buscato 51 </h1></legend>
 <li>ACOMPANHADO POR: Alessandra</li>
 <li><h1>FEITO NO DOMINGO 14/04/2019</h1></li>
 </fieldset></a><br>
-
+<div id="total15"></div>
 <a><fieldset><legend><h1>15/04/2019 09:31 - Cliente Andre Ricardo Garcia 
 Rua Irany Aparecida Costa 70 Jardim Tulipas </h1></legend>
 <li>Cliente ausente número para contato não é do assinante</li>
 </fieldset></a><br>
 
 </ul></fieldset></div>
+</div>
 </body>
 		<script>
 var offset = $('#cssmenu').offset().top;
