--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <li class="nav"><a class="nave" href='#13'>13/04/2019</a></li>
 <li class="nav"><a class="nave" href='#14'>14/04/2019</a></li>
 <li class="nav"><a class="nave" href='#15'>15/04/2019</a></li>
+<li class="nav"><a class="nave" href='#16'>16/04/2019</a></li>
 </ul>
 </div>
 </div>
@@ -332,7 +333,7 @@ RUA: João buscato 51 </h1></legend>
 <br>
 <br>
 <br>
-<div id="15" class="border div"><fieldset><legend>15/04/2019 - Total de Clientes: 1</legend>
+<div id="15" class="border div"><fieldset><legend>15/04/2019 - Total de Clientes: 2</legend>
 <ul>
 <a style="color:red;" href="#total15"><h1 style="color:red;">Total de Itens</h1></a>
 <a><fieldset><legend><h1>15/04/2019 09:20 - Cliente Alessandra Cris tina pedroso 
@@ -344,7 +345,7 @@ RUA: João buscato 51 </h1></legend>
 <li>ACOMPANHADO POR: Alessandra</li>
 <li><h1>FEITO NO DOMINGO 14/04/2019</h1></li>
 </fieldset></a><br>
-<div id="total15"></div>
+
 <a><fieldset><legend><h1>15/04/2019 09:31 - Cliente Andre Ricardo Garcia 
 Rua Irany Aparecida Costa 70 Jardim Tulipas </h1></legend>
 <li>Cliente ausente número para contato não é do assinante</li>
@@ -357,6 +358,39 @@ Rua av Adelino Martins 799 casa 3</h1></legend>
 <li>SINAL: 19.41</li>
 <li>ACOMPANHADO POR: Gilberto</li>
 </fieldset></a><br>
+<div id="total15"></div>
+<a><fieldset><legend><h1>15/04/2019 17:47 - Cliente Gilberto Ângelo bejiato  
+Rua Francisco Cabral 1 número 605</h1></legend>
+<li>MATERIAL: 2alças 38de fibra 1 Conector verde 1 conector azul </li>
+<li>ESTUDO:71206</li>
+<li>Fibra 1</li>
+<li>SINAL: 19.79</li>
+<li>ACOMPANHADO POR: julie</li>
+</fieldset></a><br>
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 8 UN</li>
+<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 96 MT</li>
+<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 2 UN</li>
+<li>CONECTOR SC/UPC GREATEK - 2 UN</li>
+</fieldset></a><br>
+</ul></fieldset></div>
+<br>
+<br>
+<br>
+<br>
+<div id="16" class="border div"><fieldset><legend>16/04/2019 - Total de Clientes: 1</legend>
+<ul>
+<a style="color:red;" href="#total16"><h1 style="color:red;">Total de Itens</h1></a>
+<a><fieldset><legend><h1>16/04/2019 06:07 - Cliente André Ricardo Garcia 
+Rua </h1></legend>
+<li>MATERIAL: 2alças 40de fibra 1 Conector verde 1 conector azul </li>
+<li>ESTUDO:</li>
+<li>Fibra 2</li>
+<li>SINAL: 19.00</li>
+<li>ACOMPANHADO POR: andre</li>
+</fieldset></a><br>
+
+<div id="total15"></div>
 </ul></fieldset></div>
 </div>
 </body>
