--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@ text-shadow:0px 0px 5px #fff;
 <li>Material 39 mts fo 4 CONECTOR 2 ESTICADOR</li>
 <li>Sinal -20,00</li>
 </fieldset></a><br>
+
 <div id="total10"></div>
+
 <a><fieldset><legend><h1>10/04/2019 16:46 - Cliente Rafael Vitor Fermiano - Rua Sebastião de Souza número 61</h1></legend>
 <li>CTO 270501 porta 04</li>
 <li>Material 75 mts fo 3 CONECTOR 2 ESTICADOR</li>
@@ -200,7 +202,9 @@ text-shadow:0px 0px 5px #fff;
 <a><fieldset><legend><h1>11/04/2019 17:19 - Elizabeth Fossem Araújo - Rua das Laranjeiras 307</h1></legend>
 <li>Ausente</li>
 </fieldset></a><br>
+
 <div id="total11"></div>
+
 <a><fieldset><legend><h1>11/04/2019 18:23 - Rodrigo Ermelino Cezar - Rua anna Schiavo Chrispim 274</h1></legend>
 <li>Todas caixas próximas cheia</li>
 <li>Inviabilizar com ampliação ou verificar cancelamento sem retirada de drop</li>
@@ -268,6 +272,7 @@ Cliente ausente</h1></legend>
 Rua Estrada do varjao 1832 Rua 8 bairro Novo Horizonte</h1></legend>
 <li>endereço não localizado</li>
 </fieldset></a><br>
+
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
 <li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 17 UN</li>
 <li>CONECTOR SC/APC D-01 SIPIBSFIBER - 3 UN</li>
@@ -279,17 +284,12 @@ Rua Estrada do varjao 1832 Rua 8 bairro Novo Horizonte</h1></legend>
 <br>
 <br>
 <br>
-<div id="13" class="border div"><fieldset><legend>13/04/2019 - Total de Clientes: 2</legend>
+<div id="13" class="border div"><fieldset><legend>13/04/2019 - Total de Clientes: 1</legend>
 <ul>
 <a style="color:red;" href="#total13"><h1 style="color:red;">Total de Itens</h1></a>
-<a><fieldset><legend><h1>13/04/2019 13:46 - CLIENTE:Willian José da Silva 
-RUA: Estrada do varjao 1832 Rua 8 </h1></legend>
-<li>MATERIAL: 8alças 136 de fibra 2 Conector verde  </li>
-<li>ESTUDO:3904</li>
-<li>SINAL: 26.39</li>
-<li>ACOMPANHADO POR:Willian</li>
-</fieldset></a><br>
+
 <div id="total13"></div>
+
 <a><fieldset><legend><h1>13/04/2019 15:22 - CLIENTE:Eliana Aparecida dos Santos franciacato 
 RUA Benedito zorzi 89</h1></legend>
 <li>MATERIAL: 4alças 56 de fibra 1 Conector verde 1 conector azul </li>
@@ -298,11 +298,12 @@ RUA Benedito zorzi 89</h1></legend>
 <li>SINAL: 18.63</li>
 <li>ACOMPANHADO POR: Eliana</li>
 </fieldset></a><br>
+
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
-<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 12 UN</li>
-<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 3 UN</li>
+<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 4 UN</li>
+<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 1 UN</li>
 <li>CONECTOR SC/UPC GREATEK - 1 UN</li>
-<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 53 MT</li>
+<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 56 MT</li>
 </fieldset></a><br>
 </ul></fieldset></div>
 
@@ -336,15 +337,6 @@ RUA: João buscato 51 </h1></legend>
 <div id="15" class="border div"><fieldset><legend>15/04/2019 - Total de Clientes: 2</legend>
 <ul>
 <a style="color:red;" href="#total15"><h1 style="color:red;">Total de Itens</h1></a>
-<a><fieldset><legend><h1>15/04/2019 09:20 - Cliente Alessandra Cris tina pedroso 
-RUA: João buscato 51 </h1></legend>
-<li>MATERIAL: 4alças 53de fibra 1 Conector verde 1 conector azul </li>
-<li>ESTUDO:270704</li>
-<li>Fibra 2</li>
-<li>SINAL: 19.47</li>
-<li>ACOMPANHADO POR: Alessandra</li>
-<li><h1>FEITO NO DOMINGO 14/04/2019</h1></li>
-</fieldset></a><br>
 
 <a><fieldset><legend><h1>15/04/2019 09:31 - Cliente Andre Ricardo Garcia 
 Rua Irany Aparecida Costa 70 Jardim Tulipas </h1></legend>
@@ -381,16 +373,32 @@ Rua Francisco Cabral 1 número 605</h1></legend>
 <div id="16" class="border div"><fieldset><legend>16/04/2019 - Total de Clientes: 1</legend>
 <ul>
 <a style="color:red;" href="#total16"><h1 style="color:red;">Total de Itens</h1></a>
-<a><fieldset><legend><h1>16/04/2019 06:07 - Cliente André Ricardo Garcia 
-Rua </h1></legend>
-<li>MATERIAL: 2alças 40de fibra 1 Conector verde 1 conector azul </li>
-<li>ESTUDO:</li>
+
+<a><fieldset><legend><h1>16/04/2019 10:42 - CLIENTE:  Maria Luciana dos Santos Silva 
+RUA:  Dario bochino 4772 casa 2 </h1></legend>
+<li>ESTUDO:3 11 03 </li>
+<li>1 conector verde 1 conector azul </li>
+<li>SINAL 22.26</li>
+<li>Acompanhado:JOSÉ</li>
+</fieldset></a><br>
+<div id="total15"></div>
+<a><fieldset><legend><h1>16/04/2019 11:41 - Cliente Luciana Santos 
+RUA:Domigos Roberto schiavo 403</h1></legend>
+<li>MATERIAL: 2alças 33de fibra 1 Conector verde 1 conector azul </li>
+<li>ESTUDO 6920</li>
 <li>Fibra 2</li>
-<li>SINAL: 19.00</li>
-<li>ACOMPANHADO POR: andre</li>
+<li>SINAL: 21.46</li>
+<li>ACOMPANHADO POR: JOSÉ Paulo</li>
 </fieldset></a><br>
 
-<div id="total15"></div>
+<a><fieldset><legend><h1>16/04/2019 15:11 - Cliente Rodrigo viera Ramos 
+RUA: orlando branco 443</h1></legend>
+<li>MATERIAL: 4alças 53de fibra 1 Conector verde 1 conector azul </li>
+<li>ESTUDO 81608</li>
+<li>Fibra 3</li>
+<li>SINAL: 19.80</li>
+<li>ACOMPANHADO POR:rodrigo</li>
+</fieldset></a><br>
 </ul></fieldset></div>
 </div>
 </body>
