--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <li class="nav"><a class="nave" href='#14'>14/04/2019</a></li>
 <li class="nav"><a class="nave" href='#15'>15/04/2019</a></li>
 <li class="nav"><a class="nave" href='#16'>16/04/2019</a></li>
+<li class="nav"><a class="nave" href='#17'>17/04/2019</a></li>
 </ul>
 </div>
 </div>
@@ -159,12 +160,11 @@ text-shadow:0px 0px 5px #fff;
 </fieldset></a><br>
 
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
-<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 42 UN</li>
-<li>ROLDANA PLASTICA 2 VIAS (KIT ROLDANA) - 8 UN</li>
-<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 17 UN</li>
-<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 748 MT</li>
+<li>35	 - 	ESTICADOR PLÁSTICO PARA DROP ÓPTICO	 - 	42	UN</li>
+<li>1053	 - 	CONECTOR SC/APC D-01 SIPIBSFIBER	 - 	17	UN</li>
+<li>527	 - 	CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO	 - 	748	MT</li>
+<li>43	 - 	ROLDANA PLASTICA 2 VIAS (KIT ROLDANA)	 - 	8	UN</li>
 </fieldset></a><br>
-
 </ul></fieldset></div>
 <br>
 <br>
@@ -211,11 +211,12 @@ text-shadow:0px 0px 5px #fff;
 </fieldset></a><br>
 
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
-<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 10 UN</li>
-<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 3 UN</li>
-<li>CONECTOR SC/UPC GREATEK - 2 UN</li>
-<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 183 MT</li>
-<li>ROLDANA PLASTICA 2 VIAS (KIT ROLDANA) - 2 UN</li>
+<li>	35	 - 	ESTICADOR PLÁSTICO PARA DROP ÓPTICO	 - 	12	UN	</li>
+<li>	1053	 - 	CONECTOR SC/APC D-01 SIPIBSFIBER	 - 	3	UN	</li>
+<li>	527	 - 	CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO	 - 	183	MT	</li>
+<li>	43	 - 	ROLDANA PLASTICA 2 VIAS (KIT ROLDANA)	 - 	2	UN	</li>
+<li>	25	 - 	CONECTOR SC/UPC GREATEK	 - 	2	UN	</li>
+
 </fieldset></a><br>
 </ul></fieldset></div>
 <br>
@@ -274,10 +275,12 @@ Rua Estrada do varjao 1832 Rua 8 bairro Novo Horizonte</h1></legend>
 </fieldset></a><br>
 
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
-<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 17 UN</li>
-<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 3 UN</li>
-<li>CONECTOR SC/UPC GREATEK - 3 UN</li>
-<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 407 MT</li>
+<li>	35	 - 	ESTICADOR PLÁSTICO PARA DROP ÓPTICO	 - 	17	UN	</li>
+<li>	1053	 - 	CONECTOR SC/APC D-01 SIPIBSFIBER	 - 	5	UN	</li>
+<li>	527	 - 	CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO	 - 	407	MT	</li>
+<li>	43	 - 	ROLDANA PLASTICA 2 VIAS (KIT ROLDANA)	 - 	0	UN	</li>
+<li>	25	 - 	CONECTOR SC/UPC GREATEK	 - 	2	UN	</li>
+
 </fieldset></a><br>
 </ul></fieldset></div>
 <br>
@@ -300,10 +303,12 @@ RUA Benedito zorzi 89</h1></legend>
 </fieldset></a><br>
 
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
-<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 4 UN</li>
-<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 1 UN</li>
-<li>CONECTOR SC/UPC GREATEK - 1 UN</li>
-<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 56 MT</li>
+<li>	35	 - 	ESTICADOR PLÁSTICO PARA DROP ÓPTICO	 - 	4	UN	</li>
+<li>	1053	 - 	CONECTOR SC/APC D-01 SIPIBSFIBER	 - 	1	UN	</li>
+<li>	527	 - 	CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO	 - 	56	MT	</li>
+<li>	43	 - 	ROLDANA PLASTICA 2 VIAS (KIT ROLDANA)	 - 	0	UN	</li>
+<li>	25	 - 	CONECTOR SC/UPC GREATEK	 - 	1	UN	</li>
+
 </fieldset></a><br>
 </ul></fieldset></div>
 
@@ -324,10 +329,12 @@ RUA: João buscato 51 </h1></legend>
 <li>ACOMPANHADO POR: Alessandra</li>
 </fieldset></a><br>
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
-<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 4 UN</li>
-<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 1 UN</li>
-<li>CONECTOR SC/UPC GREATEK - 1 UN</li>
-<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 53 MT</li>
+<li>	35	 - 	ESTICADOR PLÁSTICO PARA DROP ÓPTICO	 - 	4	UN	</li>
+<li>	1053	 - 	CONECTOR SC/APC D-01 SIPIBSFIBER	 - 	1	UN	</li>
+<li>	527	 - 	CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO	 - 	53	MT	</li>
+<li>	43	 - 	ROLDANA PLASTICA 2 VIAS (KIT ROLDANA)	 - 	0	UN	</li>
+<li>	25	 - 	CONECTOR SC/UPC GREATEK	 - 	1	UN	</li>
+
 </fieldset></a><br>
 </ul></fieldset></div>
 <br>
@@ -360,10 +367,12 @@ Rua Francisco Cabral 1 número 605</h1></legend>
 <li>ACOMPANHADO POR: julie</li>
 </fieldset></a><br>
 <a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
-<li>ESTICADOR PLÁSTICO PARA DROP ÓPTICO - 8 UN</li>
-<li>CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO - 96 MT</li>
-<li>CONECTOR SC/APC D-01 SIPIBSFIBER - 2 UN</li>
-<li>CONECTOR SC/UPC GREATEK - 2 UN</li>
+<li>	35	 - 	ESTICADOR PLÁSTICO PARA DROP ÓPTICO	 - 	8	UN	</li>
+<li>	1053	 - 	CONECTOR SC/APC D-01 SIPIBSFIBER	 - 	2	UN	</li>
+<li>	527	 - 	CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO	 - 	96	MT	</li>
+<li>	43	 - 	ROLDANA PLASTICA 2 VIAS (KIT ROLDANA)	 - 	0	UN	</li>
+<li>	25	 - 	CONECTOR SC/UPC GREATEK	 - 	2	UN	</li>
+
 </fieldset></a><br>
 </ul></fieldset></div>
 <br>
@@ -381,7 +390,7 @@ RUA:  Dario bochino 4772 casa 2 </h1></legend>
 <li>SINAL 22.26</li>
 <li>Acompanhado:JOSÉ</li>
 </fieldset></a><br>
-<div id="total15"></div>
+
 <a><fieldset><legend><h1>16/04/2019 11:41 - Cliente Luciana Santos 
 RUA:Domigos Roberto schiavo 403</h1></legend>
 <li>MATERIAL: 2alças 33de fibra 1 Conector verde 1 conector azul </li>
@@ -390,7 +399,7 @@ RUA:Domigos Roberto schiavo 403</h1></legend>
 <li>SINAL: 21.46</li>
 <li>ACOMPANHADO POR: JOSÉ Paulo</li>
 </fieldset></a><br>
-
+<div id="total16"></div>
 <a><fieldset><legend><h1>16/04/2019 15:11 - Cliente Rodrigo viera Ramos 
 RUA: orlando branco 443</h1></legend>
 <li>MATERIAL: 4alças 53de fibra 1 Conector verde 1 conector azul </li>
@@ -398,6 +407,26 @@ RUA: orlando branco 443</h1></legend>
 <li>Fibra 3</li>
 <li>SINAL: 19.80</li>
 <li>ACOMPANHADO POR:rodrigo</li>
+</fieldset></a><br>
+
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>	35	 - 	ESTICADOR PLÁSTICO PARA DROP ÓPTICO	 - 	6	UN	</li>
+<li>	1053	 - 	CONECTOR SC/APC D-01 SIPIBSFIBER	 - 	3	UN	</li>
+<li>	527	 - 	CABO OPTICO CFOAC-BLI-A/B-CM-01-CO-LSZH PR - DROP FAST COMPACTO	 - 	86	MT	</li>
+<li>	43	 - 	ROLDANA PLASTICA 2 VIAS (KIT ROLDANA)	 - 	0	UN	</li>
+<li>	25	 - 	CONECTOR SC/UPC GREATEK	 - 	3	UN	</li>
+
+</fieldset></a><br>
+</ul></fieldset></div>
+
+<div id="17" class="border div"><fieldset><legend>17/04/2019 - Total de Clientes: 1</legend>
+<ul>
+<a style="color:red;" href="#total17"><h1 style="color:red;">Total de Itens</h1></a>
+<a><fieldset><legend><h1>NADA AINDA</h1></legend>
+<li>NADA AINDA</li>
+</fieldset></a><br>
+<a><fieldset><legend><h1 style="color:red;">TOTAL DE ITENS</h1></legend>
+<li>NADA AINDA</li>
 </fieldset></a><br>
 </ul></fieldset></div>
 </div>
