--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta charset="UTF-8" />
 <title>👻</title>
-<meta name="description" content="Pesquisa de Materiais" />
+<meta name="description" content="Controle" />
 
 <!--jQuery-->
 <script
