--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ border-radius: 5px;
 <div class="nav-container">
 <div class="nav">
 <nav class="kite-menu rainbow fixed">
-   <h2 class="kite-logo">ESTOQUE 👻</h2>
+   <h2 class="kite-logo">Controle 👻</h2>
    <div class="kite-menu-trigger" id="hamburger"><span></span></div>
    <div class="kite-search-trigger">
       <i class="fa fa-search"></i>
@@ -532,11 +532,14 @@ border-radius: 5px;
          <input id="myInput" onkeyup="myFunction()" type="text" list="historico" placeholder="Busque...">
          <button type="submit" class="search-btn"> <i class="fa fa-search"></i> </button>
 		 <datalist class="nav" id="historico">
-<option value="ROTEADOR"></option>
-<option value="ANTENA"></option>
-<option value="ONU"></option>
-<option value="FONTE"></option>
-<option value="CONECTOR"></option>
+<option value="10/04/2019"></option>
+<option value="11/04/2019"></option>
+<option value="12/04/2019"></option>
+<option value="13/04/2019"></option>
+<option value="14/04/2019"></option>
+<option value="15/04/2019"></option>
+<option value="16/04/2019"></option>
+<option value="17/04/2019"></option>
 
 
  
